# python-jsonic

./: .gitignore  .gitmodules  README.md  python-jsonic.c  python-jsonic.h  setup.cfg  setup.py
examples/heroes/: heroes.json  heroes.py
examples/twitter/: twitter.py
