[metadata]
name = pyjsonic
version = 1.8
author = Oğuzhan Eroğlu
author-email = rohanrhu2@gmail.com
home-page = https://github.com/rohanrhu/python-jsonic
description = Python bindings for Jsonic JSON reader library.
description-file = README.md
license = MIT
license-file = LICENSE
keywords = json, parser, reader